name:                process
version:             0.1.0.0
author:              Sergey Parshukov
maintainer:          sergey.parshukov@me.com
build-type:          Simple
cabal-version:       >=1.10

executable process
  Hs-Source-Dirs:    src
  main-is:           Main.hs
  default-language:  Haskell2010
  build-depends:     base >=4.8 && <4.9,
                     Glob >=0.7,
                     aeson >=0.9,
                     bytestring >=0.10,
                     text >=1.2

Test-suite process-test
  Hs-Source-Dirs:    test, src
  Main-Is:           Test.hs
  Type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  build-depends:     hspec >=2.1.7
  build-depends:     base >=4.8 && <4.9,
                     Glob >=0.7,
                     aeson >=0.9,
                     bytestring >=0.10,
                     text >=1.2
