name:           process-haskell
version:        0.1.0.0
author:         Sergey Parshukov
maintainer:     sergey.parshukov@me.com
build-type:     Simple
cabal-version:  >=1.10

executable process
  Hs-Source-Dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -fwarn-unused-imports -O2
  build-depends:    base >=4.8 && <4.9,
                    Glob >=0.7,
                    aeson >=0.9,
                    bytestring >=0.10,
                    text >=1.2,
                    containers >=0.5,
                    cassava >=0.4

Test-suite process-doctest
  default-language: Haskell2010
  Hs-Source-Dirs:   test
  Main-Is:          doctest.hs
  Type:             exitcode-stdio-1.0
  ghc-options:      -threaded
  build-depends:    base >=4.8 && <4.9,
                    doctest >= 0.10
